Started SkyBlock World Multiplayer

--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,6 @@
 #Minecraft server properties
 #Sat Sep 24 16:46:30 IST 2022
+#//this is server poperties file
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
